[metadata]
name = streetviewdownloader

version = 0.2.2
license = GPLv3

description = A Python library and utility to download Google StreetView images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/christoph.fink/streetviewdownloader
project_urls =
    Documentation = https://streetviewdownloader.readthedocs.org/
    Change Log = https://gitlab.com/christoph.fink/streetviewdownloader/-/blob/main/CHANGELOG.md
    Bug Tracker = https://gitlab.com/christoph.fink/streetviewdownloader/-/issues

author = Christoph Fink
author_email = christoph.fink@helsinki.fi

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    ConfigArgParse
    numpy
    pygeos
    pyproj
    pyrosm
    pyxdg
    requests
    shapely

[options.packages.find]
where = src
include = *

[options.entry_points]
console_scripts =
    streetviewdownloader = streetviewdownloader.__main__:main
